Fix pathname to find actual path.

--- a/echo-server.html
+++ b/echo-server.html
@@ -16,10 +16,14 @@ function $(id) {
   return document.getElementById(id);
 }
 
+function locationPath() {
+  return location.pathname.substring(0, location.pathname.lastIndexOf('/') + 1);
+}
+
 document.addEventListener('DOMContentLoaded', function() {
   $('run').addEventListener('click', function() {
     $('run').disabled = true;
-    let ws = new WebSocket(location.origin.replace('http', 'ws') + location.pathname + 'listen/' + $('name').value);
+    let ws = new WebSocket(location.origin.replace('http', 'ws') + locationPath() + 'listen/' + $('name').value);
     ws.onopen = function() {
       $('run').textContent = 'Listening';
     }
